Update timeline details in index.html

--- a/index.html
+++ b/index.html
@@ -115,12 +115,8 @@
                                 <span class="timeline-period">Sep 2025 - Jan 2026</span>
                             </div>
                             <ul class="timeline-details">
-                                <li>Worked on AI-driven and data-driven solutions for operations optimization and digital transformation</li>
-                                <li>Developed HAECO Bay Management System for intelligent bay scheduling</li>
-                                <li>Partnered with engineers and management to prototype digital transformation projects under HAECO's innovation roadmap</li>
-                                <li>Solely planned and organized the company's first Techathon, building a framework for future internal-to-external innovation programs</li>
-                                <li>Advanced innovation through Technology Adoption, Lean Management, and Stakeholder Engagement</li>
-                                <li>Master of Ceremony at HAECO Lean Day 2025, engaging executives in the Annual Kaizen and Lean Excellence showcase</li>
+                                <li>Worked on AI-driven and data-driven solutions for operational innovation</li>
+                                <li>Led award-winning hackathon project and internal innovation programs</li>
                             </ul>
                             <div class="timeline-tags">
                                 <span class="tag">AI</span>
